tolk-tester/tests/invalid-semantics/err-4208.tolk
const flyp = 9999999.77777777777777;

/**
@compilation_should_fail
@stderr invalid numeric index
 */
